// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hamt multiple keys 1`] = `
Map {
  "bafyreig3w5cuffzshczi5xzwnp4igna5wehxcisr53jcjtrfxcnbgzwrui" => Block {
    "asBlock": [Circular],
    "bytes": Uint8Array [
      163,
      100,
      104,
      97,
      109,
      116,
      130,
      68,
      0,
      0,
      0,
      0,
      128,
      103,
      104,
      97,
      115,
      104,
      65,
      108,
      103,
      18,
      106,
      98,
      117,
      99,
      107,
      101,
      116,
      83,
      105,
      122,
      101,
      3,
    ],
    "cid": {
      "/": "bafyreig3w5cuffzshczi5xzwnp4igna5wehxcisr53jcjtrfxcnbgzwrui",
    },
    "value": {
      "bucketSize": 3,
      "hamt": [
        Uint8Array [
          0,
          0,
          0,
          0,
        ],
        [],
      ],
      "hashAlg": 18,
    },
  },
}
`;

exports[`Hamt with class 1`] = `
Map {
  "bafyreibrhfhhayfcwgm3gqdokiffu2rczo6diswuhgmnt5yf2thjeawu44" => Block {
    "asBlock": [Circular],
    "bytes": Uint8Array [
      163,
      100,
      104,
      97,
      109,
      116,
      130,
      68,
      0,
      0,
      8,
      0,
      129,
      129,
      130,
      68,
      116,
      101,
      115,
      116,
      216,
      42,
      88,
      37,
      0,
      1,
      113,
      18,
      32,
      193,
      154,
      121,
      127,
      161,
      253,
      89,
      12,
      210,
      229,
      180,
      45,
      28,
      245,
      242,
      70,
      226,
      155,
      145,
      104,
      78,
      47,
      135,
      64,
      75,
      129,
      220,
      52,
      92,
      122,
      86,
      160,
      103,
      104,
      97,
      115,
      104,
      65,
      108,
      103,
      18,
      106,
      98,
      117,
      99,
      107,
      101,
      116,
      83,
      105,
      122,
      101,
      3,
    ],
    "cid": {
      "/": "bafyreibrhfhhayfcwgm3gqdokiffu2rczo6diswuhgmnt5yf2thjeawu44",
    },
    "value": {
      "bucketSize": 3,
      "hamt": [
        Uint8Array [
          0,
          0,
          8,
          0,
        ],
        [
          [
            [
              Uint8Array [
                116,
                101,
                115,
                116,
              ],
              {
                "code": 113,
                "hash": Uint8Array [
                  18,
                  32,
                  193,
                  154,
                  121,
                  127,
                  161,
                  253,
                  89,
                  12,
                  210,
                  229,
                  180,
                  45,
                  28,
                  245,
                  242,
                  70,
                  226,
                  155,
                  145,
                  104,
                  78,
                  47,
                  135,
                  64,
                  75,
                  129,
                  220,
                  52,
                  92,
                  122,
                  86,
                  160,
                ],
                "version": 1,
              },
            ],
          ],
        ],
      ],
      "hashAlg": 18,
    },
  },
  "bafyreigbtj4x7ip5legnfznufuopl4sg4knzc2cof6duas4b3q2fy6swua" => Block {
    "asBlock": [Circular],
    "bytes": Uint8Array [
      160,
    ],
    "cid": {
      "code": 113,
      "hash": Uint8Array [
        18,
        32,
        193,
        154,
        121,
        127,
        161,
        253,
        89,
        12,
        210,
        229,
        180,
        45,
        28,
        245,
        242,
        70,
        226,
        155,
        145,
        104,
        78,
        47,
        135,
        64,
        75,
        129,
        220,
        52,
        92,
        122,
        86,
        160,
      ],
      "version": 1,
    },
    "value": {},
  },
}
`;
